// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el ProductImage debe mostrar la imagen del producto 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <img
      alt="Product Image"
      class="productImg undefined"
      src="./coffee-mug.png"
    />
  </div>
</div>
`;

exports[`Pruebas en el ProductImage debe mostrar la imagen personalizada 1`] = `
<div>
  <img
    alt="Product Image"
    class="productImg undefined"
    src="image-url"
  />
</div>
`;
